# test_pusto_studio

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
conts/: choices.py
docker/api/: Dockerfile
docker/nginx/: nginx.conf
tests1/: admin.py  apps.py  models.py
tests1/management/commands/: create_data.py
tests2/: admin.py  apps.py  models.py  services.py  signals.py
tests2/management/commands/: create_data_2.py
